--- a/Errand Request API/Errand-Request-API/src/main/resources/application-dev.properties
+++ b/Errand Request API/Errand-Request-API/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 spring.application.name=Errand-Request-API
 
+server.port=8081
 
 # H2 database Configuration
 spring.datasource.url=jdbc:h2:mem:erranddb
